<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:baselineAligned="false">
    
   	<LinearLayout 
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginRight="5dp"
        android:layout_weight="1"
        android:orientation="vertical" >
        
	    <ImageView 
		    android:id="@+id/product_image"
		    android:layout_width="match_parent"
		    android:layout_height="100dp"
		    android:adjustViewBounds="true"
		    android:scaleType="centerCrop"
		    android:contentDescription="@string/product_image" />
    
	</LinearLayout>    
	    
    <LinearLayout 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="5dp"
        android:orientation="vertical" >

		<TextView
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/product_id" />
		
		<TextView
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/product_name" />
		
		<TextView
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/brand_id" />

		<TextView
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/brand_name" />
		
		<TextView
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/style_id" />
		
		<TextView
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/color" />
		
		<TextView
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/price" />
		
		<TextView
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/percent_off" />
		    
	</LinearLayout>
	
	<LinearLayout 
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:orientation="vertical" >

		<TextView
		    android:id="@+id/product_id"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content" />
		
		<TextView
		    android:id="@+id/product_name"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content" />
		
		<TextView
		    android:id="@+id/brand_id"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content" />
		
		<TextView
		    android:id="@+id/brand_name"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content" />
		
		<TextView
		    android:id="@+id/style_id"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content" />
		
		<TextView
		    android:id="@+id/color"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content" />
		
		<TextView
		    android:id="@+id/price"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content" />
		
		<TextView
		    android:id="@+id/percent_off"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content" />
		    
	</LinearLayout>
    
</LinearLayout>