<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
	    xmlns:tools="http://schemas.android.com/tools"
	    android:layout_width="match_parent"
	    android:layout_height="match_parent" >

	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:background="@android:color/white"
	    android:orientation="vertical" >
	
	    <ImageView 
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_margin="16dp"
	        android:src="@drawable/zappos_logo"
	        android:contentDescription="@string/zappos_logo" />
	    
		<TextView 
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_gravity="center"
		    android:gravity="center"
		    android:text="@string/front_text" />
		
		<EditText
		    android:id="@+id/product"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:layout_gravity="center"
			android:layout_marginLeft="16dp"
		    android:layout_marginRight="16dp"
		    android:gravity="center"
		    android:hint="@string/enter" />
		
		<Button
		    android:id="@+id/search"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:layout_gravity="center"
			android:layout_marginLeft="16dp"
		    android:layout_marginRight="16dp"
		    android:background="@drawable/btn_selector"
		    android:text="@string/search"
		    android:onClick="search" />
	    
	</LinearLayout>
	
	<FrameLayout 
	    android:id="@+id/progressContainer"
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:clickable="true">
	    
	    <ProgressBar 
	        style="@android:style/Widget.DeviceDefault.Light.ProgressBar.Large"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center" />
	    
	</FrameLayout>

</FrameLayout>
